part1 and part2 are in separate classes