@@ -1,23 +1,23 @@
 package year2023;
 
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 public class Day8_1 {
     record MapInformation(String left, String right) {
     }
 
-    public static void main(String[] args) throws IOException {
-        List<String> lines = Files.readAllLines(Paths.get(args[0]));
-        String[] way = lines.remove(0).split("");
+    public String part1(List<String> lines) {
+        lines = new ArrayList<>(lines);
+        String[] way = lines.removeFirst().split("");
         Map<String, MapInformation> maps = new HashMap<>();
 
         String currentKey = "AAA";
         int steps = 0;
 
-        lines.remove(0);
+        lines.removeFirst();
 
         for (String line : lines) {
             String[] splitLine = line.split(" = ");
@@ -47,6 +47,6 @@ public class Day8_1 {
             }
         }
 
-        System.out.println(steps);
+        return String.valueOf(steps);
     }
 }
